<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Assisstant</string>
    <string name="hello_world">WorkMate ;) </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sqlmanager">Task Assisstant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_task_by_name">Task Assisstant</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="curresc">"Current Score : "</string>
    <string name="tottaskdone">"Total Tasks Done : "</string>
    <string name="tottaskleft">"Total Tasks Left : "</string>
    <string name="partdatetask">Particular Date Tasks</string>
    <string name="date">"DATE : "</string>
    <string name="OK">OK</string>
    <string name="taskdone">"TASKS DONE : "</string>
    <string name="taskleft">"TASKS LEFT : "</string>
    <string name="gototask">GO TO TASK</string>
    <string name="choosetask">"Choose Task : "</string>
    <string name="View_Task">View Task</string>
    <string name="Create_Task">Create Task</string>
    <string name="Modify_Task">Modify Task</string>
    <string name="View_Score">View Score</string>
    <string name="CREATE_TASKS">CREATE TASKS</string>
    <string name="TaskName">Task Name :</string>
    <string name="task_dead">Task DeadLine :</string>
    <string name="HighPriority">High Priority</string>
    <string name="MediumPriority">" Medium Priority"</string>
    <string name="LowPriority">Low Priority</string>
    <string name="ADD">ADD</string>
    <string name="TaskPriority">Task Priority :</string>
    <string name="DONE_TASKS">DONE TASKS</string>
    <string name="ViewBYName">View BY Name</string>
    <string name="ViewBYDate">View BY Date</string>
    <string name="ViewBYPriority">View BY Priority</string>
    <string name="TO_DO">TO DO</string>
    <string name="which">Which tasks would you like to view? :</string>
    <string name="DoneTasks">Done Tasks</string>
    <string name="LeftTasks">Left Tasks</string>
    <string name="ChangeTask">Change Task Date</string>
    <string name="ChangePriority">Change Priority</string>
    <string name="done">Mark as Done</string>
    <string name="RemoveTask">Remove Task</string>
    <string name="whattodo">What would you like to do? :</string>
    <string name="title_activity_change_task_date">Task Assisstant</string>
    <string name="newdate">Enter new date:</string>
    <string name="title_activity_change_priority">Task Assisstant</string>
    <string name="title_activity_change_done_status">Task Assisstant</string>
    <string name="doneq">Would you like to mark this task as done?</string>
    <string name="y">Yes</string>
    <string name="n">No</string>
    <string name="title_activity_delete_task">Task Assisstant</string>
    <string name="del">Are you sure you want to delete this task?</string>
    <string name="back">Back to Home Page</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dateconfig">yyyy/mm/dd</string>

</resources>