<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="40sp" />

    <Button
        android:id="@+id/bVT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/View_Task" />

    <Button
        android:id="@+id/bCT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create_Task" />

    <Button
        android:id="@+id/bMT"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Modify_Task" />

    <Button
        android:id="@+id/bVS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/View_Score" />

</LinearLayout>