<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView
         android:id="@+id/tVCreatetsk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:text="@string/CREATE_TASKS" />

    <TextView
        android:id="@+id/tVtskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/TaskName" />

    <EditText
        android:id="@+id/eTtskname"
        android:inputType="text"
        android:layout_width="240dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content"
        android:ems="10" 
        >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tVTskDt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/task_dead" />

    <EditText
        android:id="@+id/eTtskDt"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/dateconfig"
        android:inputType="date" />

    <TextView
        android:id="@+id/tVtskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/TaskPriority" />

    <RadioGroup
        android:id="@+id/rGPr"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rPRhigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HighPriority"
            android:textColor="@color/red" />

        <RadioButton
            android:id="@+id/rPRmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MediumPriority"
            android:textColor="@color/yellow" />

        <RadioButton
            android:id="@+id/rPRlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LowPriority"
            android:textColor="@color/green" />

    </RadioGroup>

    <Button
        android:id="@+id/bAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/ADD" />

</LinearLayout>