<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tVleftTasks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="95dp"
        android:text="@string/TO_DO"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bViewbyNamelft"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/ViewBYName" />

    <Button
        android:id="@+id/bViewbydtlft"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/ViewBYDate" />

    <Button
        android:id="@+id/bViewbyprlft"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:text="@string/ViewBYPriority" />

</LinearLayout>