<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ChangePriority" >

    <TextView
        android:id="@+id/tVtskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:textSize="18sp"
        android:text="@string/TaskPriority" />

    <RadioGroup
        android:id="@+id/rGPr"
        android:layout_width="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rPRhigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HighPriority"
            android:textColor="@color/red" />

        <RadioButton
            android:id="@+id/rPRmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MediumPriority"
            android:textColor="@color/yellow" />

        <RadioButton
            android:id="@+id/rPRlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LowPriority"
            android:textColor="@color/green" />

    </RadioGroup>

    <Button
        android:id="@+id/bModTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/OK" />

</LinearLayout>
